Ajout Jetons fonctionnel